--- a/ops/deploy/roles/app/templates/spring_app.service.j2
+++ b/ops/deploy/roles/app/templates/spring_app.service.j2
@@ -2,7 +2,8 @@
 Description=Spring application Service
 
 [Service]
-User=nobody
+Group=alt
+User=alt
 ExecStart=/lib/jvm/java/bin/java -Xmx256m -jar {{host_app_destination}}/{{app_file_name}}
 SuccessExitStatus=143
 TimeoutStopSec=15
