--- a/ops/deploy/roles/prometheus/templates/prometheus.service.j2
+++ b/ops/deploy/roles/prometheus/templates/prometheus.service.j2
@@ -37,7 +37,7 @@ PrivateDevices=true
 PrivateTmp=true
 ProtectHome=true
 RemoveIPC=true
-RestrictSUIDSGID=true
+#RestrictSUIDSGID=true
 #SystemCallFilter=@signal @timer
 
 {% if prometheus_systemd_version | int >= 231 %}
