--- a/ops/deploy/roles/elk/templates/logstash/logstash.yml.j2
+++ b/ops/deploy/roles/elk/templates/logstash/logstash.yml.j2
@@ -279,8 +279,8 @@
 # log.level: info
 # path.logs:
 #
-config.debug: true
-log.level: debug
+#config.debug: true
+#log.level: debug
 # ------------ Other Settings --------------
 #
 # Where to find custom plugins
