--- a/ops/deploy/roles/elk/templates/elastic/elasticsearch.yml.j2
+++ b/ops/deploy/roles/elk/templates/elastic/elasticsearch.yml.j2
@@ -60,6 +60,7 @@ network.host: 0.0.0.0
 # finds starting at 9200. Set a specific HTTP port here:
 #
 #http.port: 9200
+xpack.security.enabled: false
 #
 # For more information, consult the network module documentation.
 #
