--- a/ops/deploy/roles/elk/templates/logstash/logstash.service.j2
+++ b/ops/deploy/roles/elk/templates/logstash/logstash.service.j2
@@ -6,7 +6,7 @@ EnvironmentFile=/etc/environment
 User=user
 Group=user
 Type=simple
-ExecStart={{logstash_remote_dest}}/{{ logstash_name }}/bin/logstash -f {{logstash_remote_dest}}/{{ logstash_name }}/config/logstash.conf
+ExecStart={{logstash_remote_dest}}/{{ logstash_name }}/bin/logstash
 
 [Install]
 WantedBy=multi-user.target
